add button functions

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -38,6 +38,6 @@ html(lang="en")
                             td= product.currency   
                             td 
                                 button.edit Edit 
-                                button.delete(href) Delete
-
+                                button.delete Delete
+        script(src="/public/main.js") 
                 
