--- a/src/views/editform.pug
+++ b/src/views/editform.pug
@@ -1,13 +1,19 @@
-section.edit-product 
-    form()
-        div.form-group 
-            label(for="name") Name:
-            input(type="text", name="name", id="name" value=product.name)  
-        div.form-group 
-            label(for="price") Price:
-            input(type="text", name="price", id="price" value=product.price)
-        div.form-group
-            label(for="currency") Currency: 
-            input(type="text", name="currency", id="currency" value=product.currency)
-        input(type="submit", value="Save")
-        a(href="/") Back to main
+doctype html
+html(lang="en")
+    include templates/head.pug
+    body
+        section.edit-product 
+            form(id="edit-form")
+                input(type="hidden", name="id" value=product.id)
+                div.form-group 
+                    label(for="name") Name:
+                    input(type="text", name="name", id="name" value=product.name)  
+                div.form-group 
+                    label(for="price") Price:
+                    input(type="text", name="price", id="price" value=product.price)
+                div.form-group
+                    label(for="currency") Currency: 
+                    input(type="text", name="currency", id="currency" value=product.currency)
+                input.save(type="submit", value="Save")
+                a(href="/") Back to main
+    script(src="/public/editform.js") 
