--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,6 +1,10 @@
 doctype html
 html(lang="en")
-    include templates/head.pug 
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Store
+        link(rel="stylesheet", href="../public/style.css")
     body 
         header 
             h1 Store
